Error Mitigation/MagiCoder/Data/java_awt_print/java_awt_printOutputResult.txt
Sample: PageFormat_1
----------------------------------------------------------------
================================================================

Sample: PageFormat_2
----------------------------------------------------------------
stdout:
Orientation: 1

================================================================

Sample: PageFormat_3
----------------------------------------------------------------
================================================================

Sample: PageFormat_4
----------------------------------------------------------------
output:
./Data/java_awt_print/javaFiles/PageFormat_4.java:12: error: cannot find symbol
        System.out.println("Original paper size: " + paper.getSize());
                                                          ^
  symbol:   method getSize()
  location: variable paper of type Paper
./Data/java_awt_print/javaFiles/PageFormat_4.java:13: error: cannot find symbol
        System.out.println("Copied paper size: " + copiedPaper.getSize());
                                                              ^
  symbol:   method getSize()
  location: variable copiedPaper of type Paper
2 errors


================================================================

Sample: PrinterJob_2
----------------------------------------------------------------
stdout:
sun.print.PSPrinterJob@548ad73b

================================================================

Sample: PrinterJob_5
----------------------------------------------------------------
output:
./Data/java_awt_print/javaFiles/PrinterJob_5.java:2: error: cannot find symbol
import java.awt.print.PrintService;
                     ^
  symbol:   class PrintService
  location: package java.awt.print
./Data/java_awt_print/javaFiles/PrinterJob_5.java:7: error: cannot find symbol
        PrintService printService = printerJob.getPrintService();
        ^
  symbol:   class PrintService
  location: class PrinterJob_5
2 errors


================================================================

